--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/id_snowboarder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Old school snowboarder"
+            app:srcCompat="@drawable/star_sky" />
 
         <fragment
             android:name="com.example.screens.BlankFragment"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:tag="blank_fragment"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:tag="blank_fragment" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,6 +36,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
