--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,24 +19,17 @@
             android:id="@+id/id_snowboarder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="Old school snowboarder"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:contentDescription="Night sky"
             app:srcCompat="@drawable/star_sky" />
 
         <fragment
             android:name="com.example.screens.BlankFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:tag="blank_fragment" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
     </LinearLayout>
 
