--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_blank_fragment" />
+        android:text="This is the blank fragment saying that this image is from Mammoth Hot Springs."
+        android:typeface="monospace"/>
 
 </FrameLayout>
